# control_dq_ros

./: README.md
demo_plots/demo1_no_admittance/: 4plots.eps  ee_y_positions.eps  force_and_squeezing.eps  int_stresses.eps  rel_penetration.eps  rel_position.eps
demo_plots/demo1_no_admittance/demo2_no_modulation/: 4plots.eps  frel.eps  int_stresses.eps  pos_arms.eps  rel_penetration.eps
demo_plots/demo2_no_modulation/: 4plots.eps  int_stresses.eps  rel_force.eps
demo_plots/demo3_K_rel_modulation/: 4plots.eps  EE_pos.eps  frel.eps  int_stresses.eps  k_adaptive.eps  rel_pos.eps
panda_controllers/: CMakeLists.txt  package.xml  panda_controllers_plugin.xml
panda_controllers/config/: panda_controllers.yaml  visual_rviz.rviz
panda_controllers/include/panda_controllers/: Dynamics.h  dual_arm_control.h  dual_impedance_loop.h  impedance_control_dq.h  impedance_loop.h  momentum_observer.h  motion_control_dq.h  planner.h
panda_controllers/include/utils/: momentum_observer.h  parsing_utilities.h  pseudo_inversion.h
panda_controllers/launch/: controller.launch  dual_arm.launch  imp_controller.launch  panda_controller.launch  trajectory.launch
panda_controllers/msg/: CompliantTraj.msg  DesiredImpedance.msg  DesiredProjectTrajectory.msg  EEpose.msg  InfoDebug.msg  InfoMsg.msg  RobotState.msg
panda_controllers/src/: Dynamics.cpp  commands.cpp  commands_dual.cpp  dq_trajectory.cpp  dual_arm_control.cpp  dual_impedance_loop.cpp  impedance_control_dq.cpp  impedance_loop.cpp  modulator.cpp  modulator_2.cpp  momentum_observer.cpp  motion_control_dq.cpp  planner.cpp
rosbag/: Plottin.m  Untitled.m  convert_bags_to_mats.m  extract_data.m  extract_demo1_data.asv  extract_demo1_data.m  extract_demo2_data.asv  extract_demo2_data.m  extract_demo3_data.m  fixed_impedance.mat  no_admittance.mat  save_plots.m  variable_impedance.mat  variable_impedance_800_k.mat
